--- a/src/assets/stylesheets/components/_header.scss
+++ b/src/assets/stylesheets/components/_header.scss
@@ -1,5 +1,4 @@
 header {
-
   width: 100%;
   color: $white;
   background-color: $gatsby-purple;
@@ -25,7 +24,7 @@ header {
     display: block;
     color: lighten($gatsby-purple, 50);
     text-decoration: none;
-    padding: 0 .5em;
+    padding: 0 0.5em;
   }
 
   p {
@@ -33,5 +32,4 @@ header {
     font-weight: bold;
     margin: 0;
   }
-
 }
