--- a/src/assets/stylesheets/components/_map.scss
+++ b/src/assets/stylesheets/components/_map.scss
@@ -1,5 +1,4 @@
 .map {
-
   position: relative;
 
   &,
@@ -8,7 +7,6 @@
     height: 100%;
     background: $blue-grey-50;
   }
-
 }
 
 .map-loading {
@@ -27,16 +25,13 @@
 }
 
 .map-marker {
-
   &[class*="shadow"] {
     filter: blur(5px);
-    opacity: .7;
+    opacity: 0.7;
   }
-
 }
 
 .icon-marker {
-
   display: flex;
   position: relative;
   justify-content: center;
@@ -44,24 +39,20 @@
   color: white;
   width: 3.6em;
   height: 3.6em;
-  font-size: .7em;
+  font-size: 0.7em;
   font-weight: bold;
   background-color: $red-800;
   border-radius: 100%;
-  box-shadow: 0 2px 5px rgba(black, .9);
+  box-shadow: 0 2px 5px rgba(black, 0.9);
 
   &:hover {
-
     .icon-marker-tooltip {
       display: block;
     }
-
   }
-
 }
 
 .icon-marker-tooltip {
-
   display: none;
   position: absolute;
   bottom: 100%;
@@ -69,33 +60,33 @@
   font-size: 1.4em;
   padding: 1em;
   background-color: $blue-grey-900;
-  border-radius: .4em;
+  border-radius: 0.4em;
   margin-bottom: 1em;
-  box-shadow: 0 3px 5px rgba(black, .9);
+  box-shadow: 0 3px 5px rgba(black, 0.9);
 
   &:before {
     display: block;
     position: absolute;
-    bottom: -.6em;
+    bottom: -0.6em;
     left: 50%;
-    content: '';
+    content: "";
     width: 1.4em;
     height: 1.4em;
     background-color: $blue-grey-900;
     transform: rotate(45deg);
-    margin-left: -.7em;
+    margin-left: -0.7em;
   }
 
   h2 {
     font-size: 1.5em;
     line-height: 1.2;
-    margin-bottom: .1em;
+    margin-bottom: 0.1em;
     margin-top: 0;
   }
 
   h3 {
     font-size: 1.2em;
-    margin: .1em 0;
+    margin: 0.1em 0;
     font-weight: normal;
     color: $blue-grey-100;
   }
@@ -108,7 +99,6 @@
   ul {
     list-style: none;
     padding: 0;
-    margin: .6em 0 0;
+    margin: 0.6em 0 0;
   }
-
 }
