--- a/src/assets/stylesheets/components/_map.scss
+++ b/src/assets/stylesheets/components/_map.scss
@@ -1,3 +1,5 @@
+$map-background: #081217; // tilelayer background color
+
 .map {
   position: relative;
 
@@ -5,7 +7,16 @@
   .map-base {
     width: 100%;
     height: 100%;
-    background: $blue-grey-50;
+    background: $map-background;
+
+    .leaflet-control-attribution {
+      color: $blue-grey-400;
+      background-color: darken($map-background, 5);
+
+      a {
+        color: #009ddb;
+      }
+    }
   }
 }
 
