--- a/src/assets/stylesheets/components/_map.scss
+++ b/src/assets/stylesheets/components/_map.scss
@@ -56,9 +56,11 @@ $map-background: #081217; // tilelayer background color
   border-radius: 100%;
   box-shadow: 0 2px 5px rgba(black, 0.9);
 
-  &:hover {
-    .icon-marker-tooltip {
-      display: block;
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      .icon-marker-tooltip {
+        display: block;
+      }
     }
   }
 }
