--- a/src/assets/stylesheets/components/_footer.scss
+++ b/src/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,4 @@
 footer {
-
   width: 100%;
   height: 2em;
   line-height: 2em;
@@ -12,4 +11,7 @@ footer {
     margin: 0;
   }
 
+  a {
+    color: $blue-grey-100;
+  }
 }
